force-app/main/default/objects/OrderItem/fields/Custo_Producao__c.field-meta.xml
<CustomField>
    <fullName>Custo_Producao__c</fullName>
    <label>Custo De Producao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>