force-app/main/default/objects/OrderItem/fields/DeletedProduct__c.field-meta.xml
<CustomField>
    <fullName>DeletedProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeletedProduct?</label>
    <type>Checkbox</type>
</CustomField>