force-app/main/default/objects/OrderItem/fields/Desconto_Produto__c.field-meta.xml
<CustomField>
    <fullName>Desconto_Produto__c</fullName>
    <formula>( Preco_Final__c -  UnitPrice )  / Preco_Final__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>