force-app/main/default/objects/OrderItem/fields/FreightCost__c.field-meta.xml
<CustomField>
    <fullName>FreightCost__c</fullName>
    <label>Custo De Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>