force-app/main/default/objects/OrderItem/fields/IdealPrice__c.field-meta.xml
<CustomField>
    <fullName>IdealPrice__c</fullName>
    <formula>ProductionCost__c * ( 1 + TaxPercentage__c ) * (1 +  MarginPercentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Ideal de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>