force-app/main/default/objects/OrderItem/fields/Margem_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Margem_Excedente__c</fullName>
    <formula>IF( ((Preco_Total_Venda__c / Preco_Total__c) - 1) &lt;= 0, 
 0,
  ((Preco_Total_Venda__c / Preco_Total__c) - 1)
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem de Contribuição Excedente.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>