force-app/main/default/objects/OrderItem/fields/Porcentagem_Imposto__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_Imposto__c</fullName>
    <label>Porcentagem De Imposto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>