force-app/main/default/objects/OrderItem/fields/Preco_Final__c.field-meta.xml
<CustomField>
    <fullName>Preco_Final__c</fullName>
    <formula>Preco_S_Margem__c * (1 +  Porcentagem_Margem__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>