force-app/main/default/objects/OrderItem/fields/Preco_Ideal_venda__c.field-meta.xml
<CustomField>
    <fullName>Preco_Ideal_venda__c</fullName>
    <formula>Custo_Producao__c * ( 1 + Porcentagem_Imposto__c ) * (1 +  Porcentagem_Margem__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Ideal de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>