force-app/main/default/objects/OrderItem/fields/Preco_S_Margem__c.field-meta.xml
<CustomField>
    <fullName>Preco_S_Margem__c</fullName>
    <formula>(Custo_Producao__c +  Valor_Frete__c ) * (1 +  Porcentagem_Imposto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preco Sem Margem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>