force-app/main/default/objects/OrderItem/fields/Preco_Sem_Margem__c.field-meta.xml
<CustomField>
    <fullName>Preco_Sem_Margem__c</fullName>
    <label>Preco Sem Margem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>