force-app/main/default/objects/OrderItem/fields/Preco_Total__c.field-meta.xml
<CustomField>
    <fullName>Preco_Total__c</fullName>
    <formula>(Preco_S_Margem__c * (1 +  Porcentagem_Margem__c )) *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>