force-app/main/default/objects/OrderItem/fields/Preco_Total_Venda__c.field-meta.xml
<CustomField>
    <fullName>Preco_Total_Venda__c</fullName>
    <formula>( Quantity  *  UnitPrice ) +  Valor_Frete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Total Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>