force-app/main/default/objects/OrderItem/fields/ProductDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscount__c</fullName>
    <formula>IF(
    (IdealPrice__c - UnitPrice) / IdealPrice__c &lt;= 0,
    0,
    (IdealPrice__c - UnitPrice) / IdealPrice__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>