force-app/main/default/objects/OrderItem/fields/ProductionCost__c.field-meta.xml
<CustomField>
    <fullName>ProductionCost__c</fullName>
    <label>Custo De Producao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>