force-app/main/default/objects/OrderItem/fields/SurplusMargin__c.field-meta.xml
<CustomField>
    <fullName>SurplusMargin__c</fullName>
    <formula>IF( ((TotalSellingPrice__c / TotalIdealPrice__c) - 1) &lt;= 0, 
 0,
  ((TotalSellingPrice__c / TotalIdealPrice__c) - 1)
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem de Contribuição Excedente.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>