force-app/main/default/objects/OrderItem/fields/TotalIdealPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalIdealPrice__c</fullName>
    <formula>(( ProductionCost__c  *(1 + TaxPercentage__c ) * (1 +  MarginPercentage__c )) *  Quantity ) +  FreightCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Ideal Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>