force-app/main/default/objects/OrderItem/fields/TotalSellingPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingPrice__c</fullName>
    <formula>( Quantity  *  UnitPrice ) +  FreightCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Total Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>