force-app/main/default/objects/OrderItem/fields/Valor_Frete__c.field-meta.xml
<CustomField>
    <fullName>Valor_Frete__c</fullName>
    <label>Valor De Frete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>