force-app/main/default/objects/OrderItem/validationRules/quantidade_em_branco.validationRule-meta.xml
<ValidationRule>
    <fullName>quantidade_em_branco</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Quantity )</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Erro: Quantidade em branco. Insira quantidade.</errorMessage>
</ValidationRule>