force-app/main/default/objects/OrderItem/validationRules/unit_price_maior_que_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>unit_price_maior_que_zero</fullName>
    <active>true</active>
    <errorConditionFormula>UnitPrice &lt;  ListPrice</errorConditionFormula>
    <errorMessage>Erro: não é possível fazer a venda menor que o custo de catálogo.</errorMessage>
</ValidationRule>